--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,5 @@
-[package]
-name = "melee_inject"
-version = "0.1.0"
-edition = "2021"
-
-[lib]
-name = "melee_inject"
-path = "src/lib.rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-gc-gcm = "0.10"
+[workspace]
+members = [
+    "melee_inject_codegen",
+    "melee_inject",
+]
