--- a/melee_inject/Cargo.toml
+++ b/melee_inject/Cargo.toml
@@ -3,6 +3,11 @@ name = "melee_inject"
 version = "0.1.0"
 edition = "2021"
 description = "Replace DAT files within v1.02 NTSC GALE01 GCM images."
+homepage = "https://github.com/djanatyn/melee-inject"
+repository = "https://github.com/djanatyn/melee-inject"
+license = "MIT"
+keywords = ["melee", "ssbm", "dat", "gale01"]
+categories = ["games"]
 
 [lib]
 name = "melee_inject"
